2003-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (BlobToImage): Skip calling SetImageInfo() if
	magick is already set.

2003-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/error.h (enum): Remove spurious comma.

2003-08-17  William Radcliffe  <billr@corbis.com>
	* coders\png.c: Had to modify a few excetpion calls to work with
	newest macros.

2003-08-17  William Radcliffe  <billr@corbis.com>
	* coders\locale.c magick/error.h locale.c locale_c.h studio.h:
	The LOCALEH header file generator now adds an MGK_ prefiix to
	all the ID defines as part of a fix to support the new error
	and exception macros cross platform.

2003-08-16  William Radcliffe  <billr@corbis.com>
	* wand\magick_wand.c pixel_wand.c: The wand api code was totally
	left out of the large macro conversion below as an oversight.

2003-08-15  William Radcliffe  <billr@corbis.com>

	* .\coders art.c avi.c avs.c bmp.c caption.c clipboard.c cmyk.c
	cut.c dcm.c dib.c dps.c dpx.c emf.c ept.c fax.c fits.c fpx.c gif.c
	gradient.c gray.c hdf.c histogram.c html.c icon.c jbig.c jp2.c
	jpeg.c label.c locale.c logo.c map.c mat.c matte.c meta.c miff.c
	mono.c mpc.c mpeg.c msl.c mtv.c mvg.c null.c otb.c palm.c pcd.c
	pcl.c pcx.c pdb.c pdf.c pict.c pix.c png.c pnm.c preview.c ps.c
	ps2.c ps3.c psd.c pwp.c rgb.c rla.c rle.c sct.c sfw.c sgi.c
	stegano.c sun.c svg.c tga.c tiff.c tile.c tim.c topol.c ttf.c txt.c
	uil.c url.c uyvy.c vicar.c vid.c viff.c wbmp.c wmf.c wpg.c x.c xbm.c
	xc.c xcf.c xpm.c xtrn.c xwd.c yuv.c .\magick\animate.c annotate.c
	blob.c cache.c cache_view.c color.c color.h command.c compress.c
	constitute.c decorate.c delegate.c display.c draw.c effect.c
	enhance.c error.c error.h fx.c gm_messages.bin image.c list.c
	locale.c locale_c.h log.c mac.c magic.c magick.c module.c montage.c
	nt_feature.c paint.c quantize.c registry.c render.c resize.c
	segment.c semaphore.c shear.c signature.c static.c static.h