@@ -940,7 +940,9 @@ extern MagickExport unsigned int
   IsSubimage(const char *,const unsigned int),
   PlasmaImage(Image *,const SegmentInfo *,unsigned long,unsigned long),
   RGBTransformImage(Image *,const ColorspaceType),
-  SetImageClipMask(Image *,Image *),
+  SetImageChannelDepth(Image *image,
+    const ChannelType channel, const unsigned int depth),
+  SetImageClipMask(Image *image,Image *clip_mask),
   SetImageDepth(Image *,const unsigned long),
   SetImageInfo(ImageInfo *,const unsigned int,ExceptionInfo *),
   SortColormapByIntensity(Image *),
