@@ -56,6 +56,8 @@
 2003-08-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/image.c (SetImageChannelDepth): New function to transform
+        the specified channel so it fits the specified modulus depth.
   <LI> magick/blob.c (BlobToImage): Skip calling SetImageInfo() if
         magick is already set.
 
